<resources>
    <string name="app_name">Sensors</string>
    <string name="name">Name:</string>
    <string name="type">Type</string>
    <string name="accuracy">Accuracy</string>
    <string name="timestamp">Timestamp</string>
    <string name="clear">Clear</string>
    <string name="notDetected">Not Detected</string>
    <string name="send">Send</string>
    <string name="firstTime">You do not have any configuration now. Add a new one.</string>
    <string name="addConfig">Add Configuration</string>
    <string name="channel">Channel:</string>
    <string name="options">Connection Options</string>
    <string name="server">Server:</string>
    <string name="port">Port:</string>
    <string name="keystoreFile">Keystore File:</string>
    <string name="keystorePwd">Keystore Pwd:</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="select">Select</string>
    <string name="title_activity_main_info">MainInfo</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="manufacturer">Manufacturer:</string>
    <string name="model">Model:</string>
    <string name="sdk">Android SKD:</string>
    <string name="version">Android Version:</string>
    <string name="imei">IMEI:</string>
    <string name="serial">Serial Number:</string>
    <string name="hint">Type in the message you want to send</string>
    <string name="memory">Storage Usage</string>
</resources>
