<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Configuration"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <RelativeLayout
        android:layout_marginTop="120dp"
        android:id="@+id/first_part"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible">

        <TextView
            android:id="@+id/firstTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/firstTime"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/black"
            />

        <Spinner
            android:id="@+id/configs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/firstTime">


        </Spinner>

        <LinearLayout
            android:id="@+id/twoButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/configs"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">
            <Button
                android:id="@+id/select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select"
                android:visibility="gone"/>
            <Button
                android:id="@+id/del"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:visibility="gone"/>
        </LinearLayout>

        <Button
            android:id="@+id/addConfig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addConfig"
            android:layout_below="@id/twoButtons"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_marginTop="20dp"
        android:id="@+id/second_part"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible">

        <TextView
            android:id="@+id/configName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/name"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginTop="13dp"/>
        <EditText
            android:id="@+id/inputName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/configName"/>

        <TextView
            android:id="@+id/channel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/channel"
            android:textSize="20sp"
            android:layout_below="@id/inputName"
            android:textColor="@color/black"/>
        <Spinner
            android:id="@+id/channels"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/inputName"
            android:layout_toRightOf="@id/channel"
            android:entries="@array/channels">

        </Spinner>

        <TextView
            android:id="@+id/options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/options"
            android:textSize="21sp"
            android:textColor="@color/black"
            android:layout_below="@id/channel"
            android:layout_marginTop="20dp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/server"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/options"
            android:text="@string/server"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginTop="13dp"
            />
        <EditText
            android:id="@+id/inputServer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/options"
            android:layout_toRightOf="@id/server"/>

        <TextView
            android:id="@+id/port"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/server"
            android:text="@string/port"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginTop="13dp"/>
        <EditText
            android:id="@+id/inputPort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/server"
            android:layout_toRightOf="@id/port"/>

        <TextView
            android:id="@+id/keyFile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/port"
            android:text="@string/keystoreFile"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginTop="13dp"/>

        <TextView
            android:id="@+id/keyPwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/keyFile"
            android:text="@string/keystorePwd"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginTop="13dp"/>
        <EditText
            android:id="@+id/inputPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/keyFile"
            android:layout_toRightOf="@id/keyPwd"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/keyPwd"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">
            <Button
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"/>
            <Button
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                />
        </LinearLayout>
    </RelativeLayout>
    </LinearLayout>

</ScrollView>